fix: Project date hiding on mobile
Converted it to Tailwind CSS at the same time; the other class had a
side effect on small screens.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -178,6 +178,10 @@ footer a:hover,
 	margin-top: 5rem;
 }
 
+.ml-2 {
+	margin-left: 0.5rem;
+}
+
 .post-date {
 	font-size: small;
 	margin-left: 0.5rem;
@@ -231,4 +235,8 @@ footer a:hover,
 .my-2 {
 	margin-left: 0.5rem;
 	margin-right: 0.5rem;
+}
+
+.text-sm {
+	font-size: 0.875rem;
 }
